90-MixConfigs/01-HTTPS-Gateway_Service_Entry/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - name: https-external-service
      timeout: 3s
      match:
        - uri:
            exact: "/external"
      route:
        - destination:
            host: "github.com"
            port:
              number: 8443
      rewrite:
        uri: "/OriolFilter/"
      headers:
        request:
          set:
            HOST: "github.com"
